feat: add demo documents, backend audit and blockchain services, and frontend pages and components